--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
                         Department of Software Engineering, İnönü University, Malatya, Turkey
                         <a href="mailto:name@email.com">kenanince@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I am a full stack JAVA developer. Currenty, I am working as a academician at İnönü University.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.youtube.com/c/Kenan%C4%B0nce"><i class="fab fa-youtube"></i></a>
+                        <a class="social-icon" href="https://github.com/kenan-ince"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
