--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
+            <!-- Publications-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
@@ -149,7 +149,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
+            <!-- Cources-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Cources</h2>
