--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#cources">Cources</a></li>
                 </ul>
             </div>
         </nav>
@@ -141,7 +141,7 @@
             </section>
             <hr class="m-0" />
             <!-- Publications-->
-            <section class="resume-section" id="interests">
+            <section class="resume-section" id="publications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Publications</h2>
                     <p>...</p>
@@ -150,7 +150,7 @@
             </section>
             <hr class="m-0" />
             <!-- Cources-->
-            <section class="resume-section" id="awards">
+            <section class="resume-section" id="cources">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Cources</h2>
                     
