--- a/education.html
+++ b/education.html
@@ -31,7 +31,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 									<a class="nav-link" href="index.html">About</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link text-warning" href="education.html">Education</a>
+									<a class="nav-link text-warning" href="education.html">Lectures</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="publications.html">Publications</a>
