--- a/education.html
+++ b/education.html
@@ -69,7 +69,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 								<li class="list-group-item">
 									<div class="flex-grow-1">
 										<h5 class="mb-0">Data Structures</h5>
-										<div class="subheading mb-3">...</div>
+										<div class="subheading mb-3">Introduction https://youtu.be/PWigVuoTn18</div>
 									</div>
 								</li>
 								<li class="list-group-item">
