--- a/education.html
+++ b/education.html
@@ -71,7 +71,37 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 								<li class="list-group-item">
 									<div class="flex-grow-1">
 										<h5 class="mb-0">Data Structures</h5>
-										<div class="subheading mb-3">Introduction <a href="https://youtu.be/PWigVuoTn18">Video</a></div>
+										<div class="subheading mb-3">
+											<ul class="list-group list-group-flush">
+												<li class="list-group-item">Introduction : <a href="https://youtu.be/PWigVuoTn18">Video</a></li>
+												<li class="list-group-item">Asymptotic Notation : <a href="https://youtu.be/Mp0kM27QUYQ">Video</a></li>
+												<li class="list-group-item">Algorithm Complexity Analysis : <a href="https://youtu.be/uDSG-czh3F0">Video</a></li>
+												<li class="list-group-item">Static Data Structure :- Arrays : <a href="https://youtu.be/r0s5OGtZopk">Video</a></li>
+												<li class="list-group-item">Array Insert in Order : <a href="https://youtu.be/V7bRUcfTr5c">Video</a></li>
+												<li class="list-group-item">Stack and Queue with Arrays : <a href="https://youtu.be/8H7rM6zSiL0">Video</a></li>
+												<li class="list-group-item">Postfix Notation and Arithmetic Calculations : <a href="https://youtu.be/-5CcLaj8Ip4">Video</a></li>
+												<li class="list-group-item">Infix to Postfix Convertion : <a href="https://youtu.be/cgfHKpXC5WU">Video</a></li>
+												<li class="list-group-item">Simple Sorting Algorithms - Bubble Sort : <a href="https://youtu.be/UsGS_phq38w">Video</a></li>
+												<li class="list-group-item">Simple Sorting Algorithms - Insertion Sort : <a href="https://youtu.be/w37u9vesnBA">Video</a></li>
+												<li class="list-group-item">Simple Sorting Algorithms - Selection Sort : <a href="https://youtu.be/3eJR5dotoD8">Video</a></li>
+												<li class="list-group-item">Linked List : <a href="https://youtu.be/IM1cMgqp7wM">Video</a></li>
+												<li class="list-group-item">Linked List Deletion : <a href="https://youtu.be/IQJZ_wYUWTI">Video</a></li>
+												<li class="list-group-item">Linked List Java Implementation : <a href="https://youtu.be/6U2Aa-3Grj0">Video</a></li>
+												<li class="list-group-item">Linked List - Double Headed : <a href="https://youtu.be/pEp0tC_GGis">Video</a></li>
+												<li class="list-group-item">Linked List - Double Linked List : <a href="https://youtu.be/a31bAQazjik">Video</a></li>
+												<li class="list-group-item">Recursion : <a href="https://youtu.be/un6MYg9yNc8">Video</a></li>
+												<li class="list-group-item">Recursion - Java Implementation : <a href="https://youtu.be/TniNc5GMJAg">Video</a></li>
+												<li class="list-group-item">Advanced Sorting Algorithms - Shell Sort : <a href="https://youtu.be/SCCGFNoefio">Video</a></li>
+												<li class="list-group-item">Advanced Sorting Algorithms - Merge Sort: <a href="https://youtu.be/6czwTm8o_6s">Video</a></li>
+												<li class="list-group-item">Advanced Sorting Algorithms - Quick Sort: <a href="https://youtu.be/YOERUPRns3I">Video</a></li>
+												<li class="list-group-item">Advanced Sorting Algorithms - Counting Sort & Radix Sort : <a href="https://youtu.be/pbyyD2WrczM">Video</a></li>
+												<li class="list-group-item">Binary Tree : <a href="https://youtu.be/ipiwi_PucuQ">Video</a></li>
+												<li class="list-group-item">Binary Search Tree - Insertion : <a href="https://youtu.be/0icPcbXTkqU">Video</a></li>
+												<li class="list-group-item">Binary Search Tree - Search and Traversals : <a href="https://youtu.be/_vBkS-DCd98">Video</a></li>
+												<li class="list-group-item">Binary Search Tree - Deletion : <a href="https://youtu.be/81QU_ehGguU">Video</a></li>
+												<li class="list-group-item">Binary Search Tree - Java Implementation : <a href="https://youtu.be/By4aq5vySmE">Video</a></li>
+											</ul>
+										</div>
 									</div>
 								</li>
 								<li class="list-group-item">
