--- a/education.html
+++ b/education.html
@@ -70,7 +70,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
 								</li>
 								<li class="list-group-item">
 									<div class="flex-grow-1">
-										<h5 class="mb-0">Data Structures</h5>
+										<h5 class="mb-0 text-warning mb-3">Data Structures</h5>
 										<div class="subheading mb-3">
 											<ul class="list-group list-group-flush">
 												<li class="list-group-item">Introduction : <a href="https://youtu.be/PWigVuoTn18">Video</a></li>
